// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom-parser.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---mycustomparser
- hello:    world
-         123
---

__123__
**456**

=====================================output=====================================
---mycustomparser
- hello:    world
-         123
---

**123**
**456**

================================================================================
`;

exports[`empty.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
---

__123__
**456**

=====================================output=====================================
---
---

**123**
**456**

================================================================================
`;

exports[`empty-2.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
---

# Title 1

Hello, world

---

text

=====================================output=====================================
---
---

# Title 1

Hello, world

---

text

================================================================================
`;
